--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install and Build
         run: |
           npm install
-          npm build
+          npm run build
 
       - name: Deploy preview
         uses: rossjrw/pr-preview-action@v1
