add deploy workflow

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -24,4 +24,6 @@ jobs:
       - name: Deploy preview
         uses: rossjrw/pr-preview-action@v1
         with:
+          umbrella-dir: pr-preview
+          action: auto
           source-dir: ./build/
