cleanup previews, point workflows to `dist`

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - run: npm i && npm run build
       - uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: ./build/
+          folder: dist
           branch: gh-pages
           clean-exclude: pr-preview
           force: false
