--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install and Build
         run: |
           npm install
-          npm run build
+          npm run build -- --public-url ./pr-preview/pr-${{ github.event.number }}
 
       - name: Deploy preview
         if: github.event.action != 'closed'
