--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
   "dependencies": {
     "function-plot": "^1.25.0",
     "toastr": "^2.1.4"
+  },
+  "targets": {
+    "default": {
+      "includeNodeModules": true
+    }
   }
 }
