--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "Daily Quadratic Game",
   "scripts": {
     "start": "parcel ./build/*.html",
-    "build": "parcel build ./build/*.html"
+    "build": "parcel build ./build/*.html --no-scope-hoist"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/assafavital/parabole.git"
   },
   "devDependencies": {
+    "buffer": "^6.0.3",
     "parcel": "^2.12.0"
   },
   "dependencies": {
+    "function-plot": "^1.25.0",
     "toastr": "^2.1.4"
   }
 }
